# E-KYC-Verification-for-Nepal-Using-CNNs

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
AUTOMATED-KYC-VERIFICATION-FOR-NEPALI-CITIZENSHIP-USING-DEEP-LEARNING-AND-FACIAL-BIOMETRIC-AUTHENTIC/: pyproject.toml
backend/: liveness_api_OLD.py  main.py
backend/app/api/: liveness_api.py
backend/core/: config.py  model_loader.py
backend/routers/: kyc.py
backend/schemas/: kyc.py
backend/services/: document.py  face.py  liveness.py  tampering.py
ml/docservice/: detect_crop.py  test.py
ml/face-service/src/: embed.py
ml/liveness-service/: liveness.py
ml/liveness_service/: passiveliveness.py
ml/ocr_service/: parse_fields.py
ml/tampering/: predict_baseline.py
