[project]
name = "automated-kyc-verification-for-nepali-citizenship-using-deep-learning-and-facial-biometric-authentic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "easyocr>=1.7.2",
    "fastapi==0.111.1",
    "insightface>=1.0.1",
    "mediapipe==0.10.14",
    "numpy==1.26.4",
    "onnxruntime>=1.27.0",
    "opencv-python==4.10.0.84",
    "pillow>=12.2.0",
    "python-multipart==0.0.9",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.5",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.9.0",
    "timm>=1.0.27",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "ultralytics>=8.4.72",
    "uvicorn[standard]==0.30.6",
]
